second sass project

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,161 +1,132 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-$colors:(
-    primary: #005dff,
-    accent: #fff6bb,
-    primary-light: lighten(#005dff , 40%),
-    primary-dark: darken(#005dff, 40%)
-);
-$borders:15px;
-$padding:15px;
-
-
-@function color($color-name){
-    @return map-get($colors,$color-name);
-}
-
-$desktop:840px;
-
-@mixin desktop{
-    @media (min-width:#{$desktop}){
-        @content;
-    }
-}
-
-
-
-
-body, html{
-    height: 100%;
-}
-
-body{
-    font-family: 'Montserrat',
-                sans-serif;
+body ,html{
+    font-family: 'montserrat';
     margin:0;
-    
-    #bg{
-        clip-path: polygon(0 6%, 100% 0, 100% 100%, 0 72%, 13% 100%);
-        background-color: color(primary);
-        width:100%;
-        height: 100%;
-        position: absolute;
-        z-index:-1;
-
-        @include desktop{
-            clip-path: polygon(0 0, 77% 1%, 55% 100%, 0% 100%);
-        }
-    }
-    header a{
-        color:#333;
+    a{
         text-decoration: none;
-        padding:$padding;
-        display: block;
-        font-size: .8em;
-        text-transform: uppercase;
-        @include desktop {
-            color:white;
-            font-size: 1.5em;
-        }
     }
-
 }
-main{
 
-      @include desktop {
-         display: grid;
-         grid-template-columns: 50% auto;
-         grid-template-areas: "primary card";
-      }
+header{
+    padding: 2em;
+     a{
+      
+        color:black;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+    .menu-btn{
+        width: 18px;
+        float: right;
+        cursor: pointer;
+    }
+}
 
-    section#card {
-        background: white;
-        padding:20px;
+section{
+    padding: 4em;
+    h1{
+        font-size: 4em;
         margin:1em auto;
-        border-radius: $borders;
-        box-shadow: 0 10px 30px rgba(0,0,0,.2);
-        width:80%;
-        
-        @include desktop{
-            grid-area: card;
-            height:fit-content;
-            align-self: center;
-            margin:1em;
-        }
+        width: 70%;
+        text-transform: uppercase;
 
-        ul{
-            list-style-type: none;
-            margin: 0; padding:0;
-            
-            li{
-                margin-bottom: 10px;
-                padding: $padding - 6px;
-
-                span{
-                    position: absolute;
-                    width:30px;
-                    height:30px;
-                    background-color:color(primary-light);
-                    border-radius: 50%;
-                    margin-right: 10px;
-
-                }
-                strong{
-                    display: inline-block;
-                    margin-left:max(40px);
-                    margin-top:10px;
-                }
-            }
+        &::before{
+            content: ' ';
+            border-top:5px solid lightgray;
+            display: block;
+            width:45%;
         }
     }
+}
+nav{
+    position: absolute;
+    background: black;
+    padding:2em;
+    width:calc(100% - 4em);
+    height:calc(100vh - 4em);
+    display:none;
+    transform:scaleX(0);
+    transform-origin: right;
 
-    section#primary{
+    .close-btn{
+        width:18px;
+        float:right;
+        cursor: pointer;
         color:white;
-        padding:$padding;
-        text-align: center;
+        opacity: 0;
+    }
+    ul{
+        list-style-type: none;
+        margin:10% auto 0 auto;
+        padding:0;
+        display: grid;
+        grid-template-columns: repeat(4,25%);
+        width:80%;
 
-         @include desktop {
-             grid-area: primary;
-             text-align: left;
-             margin: 4em 0 0 4em;
-         }
-
-
-        h1{
-            font-size: 3em;
-            margin-top:10px;
-            text-transform: uppercase;
-
-              @include desktop {
-                  width: 30%;
-                  font-size: 4em;
-                  line-height: .9em;
-              }
-        }
-        p{
-            font-size: 1.2em;
-        }
         a{
-            color:color(primary-dark);
-            border-radius: $borders;
-            text-decoration: none;
-            text-transform: uppercase;
+            color:white;
             font-weight: bold;
-            background-color:color(accent);
-             
-            display: block;
-            text-align: center;
-            margin:50px auto 0 auto;
-            padding: $padding - 7px;
-            width:40%;
-             
-            font-size: .7em;
-              @include desktop {
-                 display: inline-block;
-                 padding: $padding $padding*4;  
-                font-size: 1em;
-                }
-               
+            font-size:1.4em;
+            text-transform: uppercase;
         }
+        //this is the span element
+        span{
+            color:gray;
+            display: block;
+            font-size:.75em;
+            margin-top:20px;
+        }
+        li{
+            opacity: 0;
+        }
+    }
+}
+.show-menu{
+    display:block;
+    animation: slide-menu 1s ease-in forwards;
+
+    .close-btn{
+        animation: show-x 1s 1s forwards;
+    }
+    li:nth-of-type(1){
+        animation: menu-item-anim .9s forwards 1s ease-in-out;
+    }
+     li:nth-of-type(2) {
+         animation: menu-item-anim .9s forwards 1.2s ease-in-out;
+     }
+      li:nth-of-type(3) {
+          animation: menu-item-anim .9s forwards 1.4s ease-in-out;
+      }
+       li:nth-of-type(4) {
+           animation: menu-item-anim .9s forwards 1.6s ease-in-out;
+       }
+}
+
+@keyframes slide-menu{
+    from{
+        transform: scaleX(0);
+    }
+    to{
+        transform: scaleX(1);
+    }
+}
+@keyframes show-x {
+    from {
+         opacity: 0;
+    }
+
+    to {
+         opacity: 1;
+    }
+}
+@keyframes menu-item-anim{
+    from{
+        transform: translateY(50%);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
     }
 }
