--- a/css/main.css
+++ b/css/main.css
@@ -1,157 +1,191 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 body, html {
-  height: 100%;
-}
-
-body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'montserrat';
   margin: 0;
 }
 
-body #bg {
-  -webkit-clip-path: polygon(0 6%, 100% 0, 100% 100%, 0 72%, 13% 100%);
-          clip-path: polygon(0 6%, 100% 0, 100% 100%, 0 72%, 13% 100%);
-  background-color: #005dff;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-}
-
-@media (min-width: 840px) {
-  body #bg {
-    -webkit-clip-path: polygon(0 0, 77% 1%, 55% 100%, 0% 100%);
-            clip-path: polygon(0 0, 77% 1%, 55% 100%, 0% 100%);
-  }
-}
-
-body header a {
-  color: #333;
+body a, html a {
   text-decoration: none;
-  padding: 15px;
-  display: block;
-  font-size: .8em;
+}
+
+header {
+  padding: 2em;
+}
+
+header a {
+  color: black;
+  font-weight: bold;
   text-transform: uppercase;
 }
 
-@media (min-width: 840px) {
-  body header a {
-    color: white;
-    font-size: 1.5em;
-  }
+header .menu-btn {
+  width: 18px;
+  float: right;
+  cursor: pointer;
 }
 
-@media (min-width: 840px) {
-  main {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 50% auto;
-        grid-template-columns: 50% auto;
-        grid-template-areas: "primary card";
-  }
+section {
+  padding: 4em;
 }
 
-main section#card {
-  background: white;
-  padding: 20px;
+section h1 {
+  font-size: 4em;
   margin: 1em auto;
-  border-radius: 15px;
-  -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  width: 70%;
+  text-transform: uppercase;
+}
+
+section h1::before {
+  content: ' ';
+  border-top: 5px solid lightgray;
+  display: block;
+  width: 45%;
+}
+
+nav {
+  position: absolute;
+  background: black;
+  padding: 2em;
+  width: calc(100% - 4em);
+  height: calc(100vh - 4em);
+  display: none;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+nav .close-btn {
+  width: 18px;
+  float: right;
+  cursor: pointer;
+  color: white;
+  opacity: 0;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 10% auto 0 auto;
+  padding: 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (25%)[4];
+      grid-template-columns: repeat(4, 25%);
   width: 80%;
 }
 
-@media (min-width: 840px) {
-  main section#card {
-    grid-area: card;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    margin: 1em;
-  }
-}
-
-main section#card ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-main section#card ul li {
-  margin-bottom: 10px;
-  padding: 9px;
-}
-
-main section#card ul li span {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  background-color: #ccdfff;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-main section#card ul li strong {
-  display: inline-block;
-  margin-left: 40px;
-  margin-top: 10px;
-}
-
-main section#primary {
+nav ul a {
   color: white;
-  padding: 15px;
-  text-align: center;
-}
-
-@media (min-width: 840px) {
-  main section#primary {
-    grid-area: primary;
-    text-align: left;
-    margin: 4em 0 0 4em;
-  }
-}
-
-main section#primary h1 {
-  font-size: 3em;
-  margin-top: 10px;
-  text-transform: uppercase;
-}
-
-@media (min-width: 840px) {
-  main section#primary h1 {
-    width: 30%;
-    font-size: 4em;
-    line-height: .9em;
-  }
-}
-
-main section#primary p {
-  font-size: 1.2em;
-}
-
-main section#primary a {
-  color: #001333;
-  border-radius: 15px;
-  text-decoration: none;
-  text-transform: uppercase;
   font-weight: bold;
-  background-color: #fff6bb;
-  display: block;
-  text-align: center;
-  margin: 50px auto 0 auto;
-  padding: 8px;
-  width: 40%;
-  font-size: .7em;
+  font-size: 1.4em;
+  text-transform: uppercase;
 }
 
-@media (min-width: 840px) {
-  main section#primary a {
-    display: inline-block;
-    padding: 15px 60px;
-    font-size: 1em;
+nav ul span {
+  color: gray;
+  display: block;
+  font-size: .75em;
+  margin-top: 20px;
+}
+
+nav ul li {
+  opacity: 0;
+}
+
+.show-menu {
+  display: block;
+  -webkit-animation: slide-menu 1s ease-in forwards;
+          animation: slide-menu 1s ease-in forwards;
+}
+
+.show-menu .close-btn {
+  -webkit-animation: show-x 1s 1s forwards;
+          animation: show-x 1s 1s forwards;
+}
+
+.show-menu li:nth-of-type(1) {
+  -webkit-animation: menu-item-anim .9s forwards 1s ease-in-out;
+          animation: menu-item-anim .9s forwards 1s ease-in-out;
+}
+
+.show-menu li:nth-of-type(2) {
+  -webkit-animation: menu-item-anim .9s forwards 1.2s ease-in-out;
+          animation: menu-item-anim .9s forwards 1.2s ease-in-out;
+}
+
+.show-menu li:nth-of-type(3) {
+  -webkit-animation: menu-item-anim .9s forwards 1.4s ease-in-out;
+          animation: menu-item-anim .9s forwards 1.4s ease-in-out;
+}
+
+.show-menu li:nth-of-type(4) {
+  -webkit-animation: menu-item-anim .9s forwards 1.6s ease-in-out;
+          animation: menu-item-anim .9s forwards 1.6s ease-in-out;
+}
+
+@-webkit-keyframes slide-menu {
+  from {
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  to {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes slide-menu {
+  from {
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  to {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@-webkit-keyframes show-x {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes show-x {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes menu-item-anim {
+  from {
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes menu-item-anim {
+  from {
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=main.css.map */
