Second project edits

--- a/css/main.css
+++ b/css/main.css
@@ -19,27 +19,30 @@ header a {
 }
 
 header .menu-btn {
-  width: 18px;
+  width: 28px;
   float: right;
   cursor: pointer;
 }
 
 section {
+  margin-top: 4em;
   padding: 4em;
+  text-align: center;
 }
 
 section h1 {
   font-size: 4em;
   margin: 1em auto;
-  width: 70%;
+  width: 90%;
+  letter-spacing: .8em;
   text-transform: uppercase;
 }
 
 section h1::before {
   content: ' ';
+  margin: 0 auto;
   border-top: 5px solid lightgray;
   display: block;
-  width: 45%;
 }
 
 nav {
@@ -53,13 +56,21 @@ nav {
           transform: scaleX(0);
   -webkit-transform-origin: right;
           transform-origin: right;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 nav .close-btn {
-  width: 18px;
+  width: 28px;
   float: right;
   cursor: pointer;
   color: white;
+  opacity: 0;
+}
+
+nav .v-shape {
+  width: 60rem;
+  margin: 5rem 25rem;
   opacity: 0;
 }
 
@@ -74,10 +85,15 @@ nav ul {
   width: 80%;
 }
 
+nav ul li {
+  margin-right: 2em;
+}
+
 nav ul a {
   color: white;
   font-weight: bold;
   font-size: 1.4em;
+  letter-spacing: .1em;
   text-transform: uppercase;
 }
 
@@ -86,6 +102,7 @@ nav ul span {
   display: block;
   font-size: .75em;
   margin-top: 20px;
+  letter-spacing: .5em;
 }
 
 nav ul li {
@@ -101,6 +118,11 @@ nav ul li {
 .show-menu .close-btn {
   -webkit-animation: show-x 1s 1s forwards;
           animation: show-x 1s 1s forwards;
+}
+
+.show-menu .v-shape {
+  -webkit-animation: show-x 2s 2s forwards;
+          animation: show-x 2s 2s forwards;
 }
 
 .show-menu li:nth-of-type(1) {
