first grid exercise

--- a/css/main.css
+++ b/css/main.css
@@ -1,213 +1,46 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
-body, html {
+body {
+  background: #111;
   font-family: 'montserrat';
   margin: 0;
 }
 
-body a, html a {
-  text-decoration: none;
-}
-
-header {
-  padding: 2em;
-}
-
-header a {
-  color: black;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-header .menu-btn {
-  width: 28px;
-  float: right;
-  cursor: pointer;
-}
-
-section {
-  margin-top: 4em;
-  padding: 4em;
-  text-align: center;
-}
-
-section h1 {
-  font-size: 4em;
-  margin: 1em auto;
-  width: 90%;
-  letter-spacing: .8em;
-  text-transform: uppercase;
-}
-
-section h1::before {
-  content: ' ';
-  margin: 0 auto;
-  border-top: 5px solid lightgray;
-  display: block;
-}
-
-nav {
-  position: absolute;
-  background: black;
-  padding: 2em;
-  width: calc(100% - 4em);
-  height: calc(100vh - 4em);
-  display: none;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-nav .close-btn {
-  width: 28px;
-  float: right;
-  cursor: pointer;
-  color: white;
-  opacity: 0;
-}
-
-nav .v-shape {
-  width: 60rem;
-  margin: 5rem 25rem;
-  opacity: 0;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 10% auto 0 auto;
+.wrapper {
   padding: 0;
+  margin: 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (25%)[4];
-      grid-template-columns: repeat(4, 25%);
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(200px, auto);
+  grid-gap: 1em;
   width: 80%;
+  margin: 10em auto 0 auto;
+  padding: 1em;
+  color: white;
+  list-style-type: none;
+  background-color: black;
+  -webkit-filter: brightness(100%);
+          filter: brightness(100%);
+  -webkit-clip-path: polygon(0% 15%, 0 0, 15% 0%, 85% 0%, 100% 0, 100% 15%, 100% 57%, 100% 100%, 56% 100%, 56% 59%, 0 100%, 0% 85%);
+          clip-path: polygon(0% 15%, 0 0, 15% 0%, 85% 0%, 100% 0, 100% 15%, 100% 57%, 100% 100%, 56% 100%, 56% 59%, 0 100%, 0% 85%);
 }
 
-nav ul li {
-  margin-right: 2em;
-}
-
-nav ul a {
+.wrapper a {
+  text-decoration: none;
   color: white;
   font-weight: bold;
-  font-size: 1.4em;
-  letter-spacing: .1em;
+  font-size: 2em;
+  letter-spacing: .2em;
   text-transform: uppercase;
 }
 
-nav ul span {
-  color: gray;
-  display: block;
-  font-size: .75em;
-  margin-top: 20px;
-  letter-spacing: .5em;
-}
-
-nav ul li {
-  opacity: 0;
-}
-
-.show-menu {
-  display: block;
-  -webkit-animation: slide-menu 1s ease-in forwards;
-          animation: slide-menu 1s ease-in forwards;
-}
-
-.show-menu .close-btn {
-  -webkit-animation: show-x 1s 1s forwards;
-          animation: show-x 1s 1s forwards;
-}
-
-.show-menu .v-shape {
-  -webkit-animation: show-x 2s 2s forwards;
-          animation: show-x 2s 2s forwards;
-}
-
-.show-menu li:nth-of-type(1) {
-  -webkit-animation: menu-item-anim .9s forwards 1s ease-in-out;
-          animation: menu-item-anim .9s forwards 1s ease-in-out;
-}
-
-.show-menu li:nth-of-type(2) {
-  -webkit-animation: menu-item-anim .9s forwards 1.2s ease-in-out;
-          animation: menu-item-anim .9s forwards 1.2s ease-in-out;
-}
-
-.show-menu li:nth-of-type(3) {
-  -webkit-animation: menu-item-anim .9s forwards 1.4s ease-in-out;
-          animation: menu-item-anim .9s forwards 1.4s ease-in-out;
-}
-
-.show-menu li:nth-of-type(4) {
-  -webkit-animation: menu-item-anim .9s forwards 1.6s ease-in-out;
-          animation: menu-item-anim .9s forwards 1.6s ease-in-out;
-}
-
-@-webkit-keyframes slide-menu {
-  from {
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-  }
-  to {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-  }
-}
-
-@keyframes slide-menu {
-  from {
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-  }
-  to {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-  }
-}
-
-@-webkit-keyframes show-x {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes show-x {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes menu-item-anim {
-  from {
-    -webkit-transform: translateY(50%);
-            transform: translateY(50%);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes menu-item-anim {
-  from {
-    -webkit-transform: translateY(50%);
-            transform: translateY(50%);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
+.wrapper p {
+  margin-top: 0;
+  line-height: 1em;
+  letter-spacing: .2em;
+  width: 50%;
+  font-weight: 100;
+  color: #aaa;
 }
 /*# sourceMappingURL=main.css.map */
