--- a/css/main.scss
+++ b/css/main.scss
@@ -1,154 +1,47 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-body ,html{
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+body{
+    
+    background: #111;
     font-family: 'montserrat';
     margin:0;
-    a{
-        text-decoration: none;
-    }
+   
 }
 
-header{
-    padding: 2em;
+.wrapper{
+
+    padding:0;
+    margin:0;
+    display: grid;
+     grid-template-columns: repeat(4,1fr);
+     grid-auto-rows: minmax(200px,auto);
+     grid-gap: 1em;
+     width:80%;
+     margin:10em auto 0 auto;
+     padding: 1em;
+     color:white;
+     list-style-type: none;
+      background-color:black;
+      filter: brightness(100%);
+      clip-path: polygon(0% 15%, 0 0, 15% 0%, 85% 0%, 100% 0, 100% 15%, 100% 57%, 100% 100%, 56% 100%, 56% 59%, 0 100%, 0% 85%);
+    
+
      a{
-      
-        color:black;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-    .menu-btn{
-        width: 28px;
-        float: right;
-        cursor: pointer;
-    }
-}
-
-section{
-    margin-top:4em;
-    padding: 4em;
-    text-align: center;
-    h1{
-        font-size: 4em;
-        margin:1em auto;
-        width: 90%;
-        letter-spacing: .8em;
-        text-transform: uppercase;
-
-        &::before{
-            content: ' ';
-           margin:0 auto;
-            border-top:5px solid lightgray;
-            display: block;
-            // width:45%;
-        }
-    }
-}
-nav{
-    position: absolute;
-    background: black;
-    padding:2em;
-    width:calc(100% - 4em);
-    height:calc(100vh - 4em);
-    display:none;
-    transform:scaleX(0);
-    transform-origin: right;
-    transition: all 0.5s;
-
-    .close-btn{
-        width:28px;
-        float:right;
-        cursor: pointer;
-        color:white;
-        opacity: 0;
-    }
-    .v-shape{
-         width:60rem;
-        margin: 5rem 25rem;
-        opacity: 0;
-    }
-    ul{
-        list-style-type: none;
-        margin:10% auto 0 auto;
-        padding:0;
-        display: grid;
-        grid-template-columns: repeat(4,25%);
-        width:80%;
-        li{
-            margin-right: 2em;
-        }
-        a{
-            color:white;
-            font-weight: bold;
-            font-size:1.4em;
-            letter-spacing: .1em;
-            text-transform: uppercase;
-           
-        }
-        //this is the span element
-        span{
-            color:gray;
-            display: block;
-            font-size:.75em;
-            margin-top:20px;
-            letter-spacing: .5em;
-        }
-        li{
-            opacity: 0;
-        }
-    }
-}
-.show-menu{
-    display:block;
-    animation: slide-menu 1s ease-in forwards;
-
-    .close-btn{
-        animation: show-x 1s 1s forwards;
-    }
-    .v-shape{
-        animation: show-x 2s 2s forwards;
-    }
-    li:nth-of-type(1){
-        animation: menu-item-anim .9s forwards 1s ease-in-out;
-    }
-     li:nth-of-type(2) {
-         animation: menu-item-anim .9s forwards 1.2s ease-in-out;
+         text-decoration: none;
+         color:white;
+         font-weight: bold;
+         font-size: 2em;
+         letter-spacing: .2em;
+         text-transform: uppercase;
      }
-      li:nth-of-type(3) {
-          animation: menu-item-anim .9s forwards 1.4s ease-in-out;
-      }
-       li:nth-of-type(4) {
-           animation: menu-item-anim .9s forwards 1.6s ease-in-out;
-       }
+     p{
+         margin-top:0;
+         line-height: 1em;
+         letter-spacing: .2em;
+         width:50%;
+         font-weight: 100;
+         color:#aaa;
+     }
+    
+
 }
 
-
-
-@keyframes slide-menu{
-    from{
-        transform: scaleX(0);
-    }
-    to{
-        transform: scaleX(1);
-    }
-}
-
-@keyframes show-x {
-    from {
-         opacity: 0;
-    }
-
-    to {
-         opacity: 1;
-    }
-}
-
-@keyframes menu-item-anim{
-    from{
-        transform: translateY(50%);
-        opacity: 0;
-    }
-    to{
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
