--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,234 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+}
+
 body {
-  background: #111;
-  font-family: 'montserrat';
-  margin: 0;
+  background: #ccc;
+  margin: 30px 50px;
+  line-height: 1.4;
+}
+
+body img {
+  max-width: 100%;
+}
+
+.btn {
+  background: #333;
+  color: #fff;
+  padding: 0.6rem 1.3rem;
+  text-decoration: none;
+  border: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  background: #ecdac5;
+  color: #333;
 }
 
 .wrapper {
-  padding: 0;
-  margin: 0;
   display: -ms-grid;
   display: grid;
+  grid-gap: 20px;
+}
+
+.wrapper .main-nav ul {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 20px;
+  padding: 0;
+  list-style: none;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: minmax(200px, auto);
-  grid-gap: 1em;
-  width: 80%;
-  margin: 10em auto 0 auto;
-  padding: 1em;
-  color: white;
-  list-style-type: none;
-  background-color: black;
-  -webkit-filter: brightness(100%);
-          filter: brightness(100%);
-  -webkit-clip-path: polygon(0% 15%, 0 0, 15% 0%, 85% 0%, 100% 0, 100% 15%, 100% 57%, 100% 100%, 56% 100%, 56% 59%, 0 100%, 0% 85%);
-          clip-path: polygon(0% 15%, 0 0, 15% 0%, 85% 0%, 100% 0, 100% 15%, 100% 57%, 100% 100%, 56% 100%, 56% 59%, 0 100%, 0% 85%);
 }
 
-.wrapper a {
+.wrapper .main-nav ul a {
+  background: #ddd;
+  display: block;
   text-decoration: none;
-  color: white;
-  font-weight: bold;
-  font-size: 2em;
-  letter-spacing: .2em;
+  padding: 0.8rem;
+  text-align: center;
+  color: #333;
   text-transform: uppercase;
+  font-size: 1.1rem;
+  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
-.wrapper p {
+.wrapper .main-nav ul a:hover {
+  background: #333;
+  color: #fff;
+}
+
+.top-container {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 20px;
+      grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-b';
+}
+
+.top-container .showcase {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: showcase;
+  min-height: 400px;
+  background: url("../img/showcase.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-pack: top;
+      -ms-flex-pack: top;
+          justify-content: top;
+  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
+.top-container .showcase h1 {
+  font-size: 4rem;
+  margin-bottom: 0;
+  color: #fff;
+}
+
+.top-container .showcase p {
+  font-size: 1.3rem;
   margin-top: 0;
-  line-height: 1em;
-  letter-spacing: .2em;
-  width: 50%;
-  font-weight: 100;
-  color: #aaa;
+  color: #fff;
+}
+
+.top-container .top-box {
+  background: #ddd;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  padding: 1.5rem;
+}
+
+.top-container .top-box .price {
+  font-size: 2.5rem;
+}
+
+.top-container .top-box .top-box-a {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: top-box-a;
+}
+
+.top-container .top-box .top-box-b {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: top-box-b;
+}
+
+.boxes {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 20px;
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.boxes .box {
+  background: #ddd;
+  text-align: center;
+  padding: 1.5rem 2rem;
+  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
+.info {
+  background: #ddd;
+  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 30px;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  padding: 3rem;
+}
+
+.portofolio {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 20px;
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.portofolio img {
+  width: 100%;
+  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
+footer {
+  margin-top: 2rem;
+  background: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
+
+@media (max-width: 700px) {
+  .wrapper .main-nav ul {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .top-container {
+        grid-template-areas: 'showcase showcase' 'top-box-a top-box-b';
+  }
+  .top-container .showcase h1 {
+    font-size: 2.5rem;
+  }
+  .info {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .info .btn {
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .top-container {
+        grid-template-areas: 'showcase ' 'top-box-a' 'top-box-b';
+  }
+  .top-container .showcase h1 {
+    font-size: 2.5rem;
+  }
+  .info {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .info .btn {
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
 }
 /*# sourceMappingURL=main.css.map */
