--- a/css/main.css
+++ b/css/main.css
@@ -1,234 +1,262 @@
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #333;
-}
-
 body {
-  background: #ccc;
-  margin: 30px 50px;
-  line-height: 1.4;
-}
-
-body img {
-  max-width: 100%;
-}
-
-.btn {
-  background: #333;
-  color: #fff;
-  padding: 0.6rem 1.3rem;
-  text-decoration: none;
-  border: 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.btn:hover {
-  background: #ecdac5;
-  color: #333;
+  margin: 0;
+  padding: 0;
 }
 
 .wrapper {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 20px;
+  padding: 0em;
 }
 
-.wrapper .main-nav ul {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 20px;
-  padding: 0;
-  list-style: none;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-}
-
-.wrapper .main-nav ul a {
-  background: #ddd;
-  display: block;
-  text-decoration: none;
-  padding: 0.8rem;
+.wrapper #overlay {
+  width: 50%;
+  height: 815px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: black;
+  background: #eee;
   text-align: center;
-  color: #333;
-  text-transform: uppercase;
-  font-size: 1.1rem;
-  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  visibility: hidden;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  opacity: 0;
+  padding: 2em 0em;
+  margin: 3em auto;
+  border-radius: 10px;
 }
 
-.wrapper .main-nav ul a:hover {
-  background: #333;
-  color: #fff;
+.wrapper #overlay .content {
+  margin-top: 10em;
+  line-height: .1em;
 }
 
-.top-container {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 20px;
-      grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-b';
-}
-
-.top-container .showcase {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: showcase;
-  min-height: 400px;
-  background: url("../img/showcase.jpg");
-  background-size: cover;
-  background-position: center;
-  padding: 3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-pack: top;
-      -ms-flex-pack: top;
-          justify-content: top;
-  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-}
-
-.top-container .showcase h1 {
-  font-size: 4rem;
+.wrapper #overlay .content h1 {
   margin-bottom: 0;
-  color: #fff;
+  text-transform: uppercase;
 }
 
-.top-container .showcase p {
-  font-size: 1.3rem;
-  margin-top: 0;
-  color: #fff;
+.wrapper #overlay .content p {
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  line-height: 1em;
+  font-style: italic;
 }
 
-.top-container .top-box {
-  background: #ddd;
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  justify-items: center;
-  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-  padding: 1.5rem;
+.wrapper #overlay .content button {
+  cursor: pointer;
+  background: none;
+  border: none;
+  margin-top: 2em;
+  border: 1px solid #333;
+  padding: .5em 1.5em;
+  font-size: 1.2em;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
-.top-container .top-box .price {
-  font-size: 2.5rem;
-}
-
-.top-container .top-box .top-box-a {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: top-box-a;
-}
-
-.top-container .top-box .top-box-b {
-  -ms-grid-row: 2;
-  -ms-grid-column: 3;
-  grid-area: top-box-b;
+.wrapper #overlay .content button:hover {
+  color: white;
+  background: #333;
 }
 
 .boxes {
+  background: -webkit-gradient(linear, left top, right top, from(#7f7fd5), color-stop(#86a8e7), to(#91eae4));
+  background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4);
   display: -ms-grid;
   display: grid;
-  grid-gap: 20px;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-row-gap: 2em;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  padding: 2em 0em;
+  margin: 3em auto;
+  width: 50%;
+  border-radius: 10px;
 }
 
 .boxes .box {
-  background: #ddd;
+  padding: 2em;
+  border-radius: 10px;
+  background: #2a3d4a;
   text-align: center;
-  padding: 1.5rem 2rem;
-  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  -ms-grid-column-align: center;
+      justify-self: center;
+  width: 100px;
+  height: 100px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.info {
-  background: #ddd;
-  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 30px;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  padding: 3rem;
+.boxes .box i {
+  color: white;
+  font-size: 3em;
+  margin: .5em auto;
+  opacity: 0;
 }
 
-.portofolio {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 20px;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+.boxes .box:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
-.portofolio img {
-  width: 100%;
-  -webkit-box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-          box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+.click-card {
+  -webkit-animation: change-background .3s forwards;
+          animation: change-background .3s forwards;
 }
 
-footer {
-  margin-top: 2rem;
-  background: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1rem;
+.click-card i {
+  -webkit-animation: show .3s forwards;
+          animation: show .3s forwards;
 }
 
-@media (max-width: 700px) {
-  .wrapper .main-nav ul {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+.correct {
+  -webkit-animation: correct .5s forwards;
+          animation: correct .5s forwards;
+}
+
+.wrong {
+  -webkit-animation: wrong .5s forwards;
+          animation: wrong .5s forwards;
+}
+
+.hide {
+  -webkit-animation: hide .3s forwards;
+          animation: hide .3s forwards;
+}
+
+.visible {
+  -webkit-animation: visible 0.2s  forwards;
+          animation: visible 0.2s  forwards;
+}
+
+@-webkit-keyframes hide {
+  from {
+    opacity: 1;
+    visibility: visible;
   }
-  .top-container {
-        grid-template-areas: 'showcase showcase' 'top-box-a top-box-b';
-  }
-  .top-container .showcase h1 {
-    font-size: 2.5rem;
-  }
-  .info {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  .info .btn {
-    display: block;
-    text-align: center;
-    margin: auto;
+  to {
+    opacity: 0;
+    visibility: hidden;
   }
 }
 
-@media (max-width: 500px) {
-  .top-container {
-        grid-template-areas: 'showcase ' 'top-box-a' 'top-box-b';
+@keyframes hide {
+  from {
+    opacity: 1;
+    visibility: visible;
   }
-  .top-container .showcase h1 {
-    font-size: 2.5rem;
+  to {
+    opacity: 0;
+    visibility: hidden;
   }
-  .info {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+}
+
+@-webkit-keyframes visible {
+  from {
+    visibility: hidden;
+    opacity: 0;
   }
-  .info .btn {
-    display: block;
-    text-align: center;
-    margin: auto;
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes visible {
+  from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes wrong {
+  from {
+    background: #00d0ba;
+    -webkit-transform: translateX(40%);
+            transform: translateX(40%);
+  }
+  to {
+    background: #ca3001;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes wrong {
+  from {
+    background: #00d0ba;
+    -webkit-transform: translateX(40%);
+            transform: translateX(40%);
+  }
+  to {
+    background: #ca3001;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes correct {
+  from {
+    background: #00d0ba;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  to {
+    background: #77e074;
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+}
+
+@keyframes correct {
+  from {
+    background: #00d0ba;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  to {
+    background: #77e074;
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+}
+
+@-webkit-keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes change-background {
+  from {
+    background: #2a3d4a;
+  }
+  to {
+    background: #00d0ba;
+  }
+}
+
+@keyframes change-background {
+  from {
+    background: #2a3d4a;
+  }
+  to {
+    background: #00d0ba;
   }
 }
 /*# sourceMappingURL=main.css.map */
